# NI.proto.backend

./: .gitignore  INTEGRATION_TEST_SETUP.md  debug_drive.py  debug_imports.py  env.integration.example  example.env  pyproject.toml  pytest.ini  requirements-api.txt  requirements-full.txt  run_bot.py  run_bot_simple.py
data/: conversation_memory.json
deployment/: Dockerfile  aws-deploy.sh  deploy-env.sh  deploy.sh  dns-setup-guide.md  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.yml  nginx.conf
docs/: api_security_guide.md  frontend_integration_guide.md
requirements/: requirements.txt
scripts/: setup_aws_dynamodb.py  setup_chromadb.py  setup_redis.py
src/api/: auth_api.py  group_chat_api.py  integrations_api.py  main.py  memory_api.py  memory_visualization.py
src/core/: base_agent.py
src/domains/agents/analyzer/: analyzer_agent.py
src/domains/agents/communication/: proactive_agent.py
src/domains/agents/execution/: __init__.py  (+1 more)
src/domains/tools/: calandar_tool.py  email_tool.py  google_drive_tool.py
src/integration/telegram/: auth_handler.py  hybrid_native_bot.py  message_processor.py  proactive_telegram.py  telegram_bot.py
src/services/: cache_service.py  dashboard_service.py  dynamodb_service.py  nudge_service.py  smart_memory.py
tests/: oba_test.py  test_1.py  test_2.py  test_base_agent.py  test_execution_integration.py  test_memory_system.py  test_native_iq_scenarios.py  test_openai.py  test_task_execution.py  test_telegram_integration.py
tests/integration/: setup_integration_tests.py  test_native_iq_integration.py
(+3 files in other folders)
