[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "native-iq"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  # Core API framework
  "fastapi>=0.104.1,<0.105.0",
  "uvicorn[standard]>=0.24.0,<0.25.0",
  "websockets>=12.0,<13.0",
  "python-multipart>=0.0.6,<0.1.0",
  
  # Data validation and serialization
  "pydantic>=2.5.0,<3.0.0",
  
  # Smart Memory & Semantic Search
  "chromadb>=0.4.15,<0.5.0",
  "sentence-transformers>=2.2.2,<3.0.0",
  "numpy>=1.24.3,<2.0.0",
  
  # Graph relationships
  "networkx>=3.2,<4.0",
  
  # Caching
  "redis>=5.0.1,<6.0.0",
  
  # AWS Services
  "boto3>=1.34.0,<2.0.0",
  "botocore>=1.34.0,<2.0.0",
  
  # Existing dependencies
  "langchain>=0.1.0,<0.2.0",
  "openai>=1.3.0,<2.0.0",
  "python-telegram-bot>=20.7,<21.0",
  "google-api-python-client>=2.108.0,<3.0.0",
  "google-auth-httplib2>=0.1.1,<0.2.0",
  "google-auth-oauthlib>=1.1.0,<2.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  
  # Additional utilities
  "asyncio-mqtt>=0.16.1,<0.17.0",
  "aiofiles>=23.2.1,<24.0.0",
  "python-dateutil>=2.8.2,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
]

test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "httpx>=0.24.0",
  "fakeredis>=2.18.0",
]